syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-public/config/protocol/config";

import "protocol/extension/xrescode_extensions_v3.proto";
import "protocol/extension/v3/xresloader.proto";

import "protocol/common/com.struct.item.common.proto";

import "protocol/common/com.struct.quest.common.proto";
import "protocol/common/com.struct.condition.common.proto";
import "protocol/common/com.struct.unlock.common.proto";
import "protocol/common/com.struct.redirect.common.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package proy.config;

// Quest
message ExcelQuestList {
  option (xrescode.loader) = {
    file_path: "quest_list.bytes"
    indexes: { fields: "id" index_type: EN_INDEX_KV }
    indexes: { fields: "type" index_type: EN_INDEX_KL allow_not_found: true }

    tags: "client"
    tags: "server"
  };

  int32 id = 1
      [(org.xresloader.field_unique_tag) = "id", (org.xresloader.validator) = "ExcelItemIdRange_Quest"];  // 8e6-9e6
  bool on = 3;                                                                                            // 是否上架
  EnQuestType type = 6;                                                                                   // 业务逻辑
  EnQuestDisplayType display_type = 7;
  int32 display_order = 8;  // 显示顺序
  string name = 11 [(org.xresloader.field_tag) = "client_only"];
  string icon = 12 [(org.xresloader.field_tag) = "client_only"];
  string desc = 13 [(org.xresloader.field_tag) = "client_only"];

  DQuestAvailablePeriodType available_period = 21;                                                    // 生命周期
  repeated DFunctionUnlockCondition unlock_conditions = 22 [(org.xresloader.field_separator) = ";"];  // 解锁条件 and
  DConditionBasicLimit common_condition = 23;
  DQuestProgressResetInfo progress_reset_period = 24;
  repeated DQuestConditionProgress progress = 25;  // or
  DQuestReward rewards = 26;
  // int32 add_progress = 27;  // 完成任务后对其他任务的加成值
  DConditionBasicLimit received_condition = 28;

  DRedirect redirect = 51;            // 任务重定向
  int32 complete_plot_group_id = 52;  // 任务完成后触发的剧情组ID
}

message DQuestSpecificAvailableTimePeriod {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message DQuestSpecificAvailableSeasonPeriod {
  int32 competition_level_id = 1;
  int32 season_id = 2;
}

message DQuestAvailablePeriodType {
  int32 type = 101;
  oneof value {
    DQuestSpecificAvailableTimePeriod specific_period = 1
        [(org.xresloader.field_alias) = "指定时间段"];                                    // 指定有效的时间段
    google.protobuf.Duration timedesc = 2 [(org.xresloader.field_alias) = "解锁后计时"];  // 接任务后开始倒计时
  }
}

message DQuestProgressResetInfo {
  int32 period_days = 1;
  google.protobuf.Timestamp start_day_reset_timepoint = 2;
}

message DQuestConditionProgress {
  repeated int64 condition_ids = 2 [(org.xresloader.validator) = "ExcelConditionPool_condition_id"];  // and
  int64 value = 3;
  int32 unique_id = 10;  // 任务内唯一ID
  repeated int32 params = 11;

  oneof progress_param {
    // bool auto_complete = 101;                           // 直接完成
    // bool online_time = 102;                             // 在线时长
    bool player_level_reach = 103 [(org.xresloader.field_alias) = "达到店铺等级"];
    int32 item_has = 105
        [(org.xresloader.field_alias) = "拥有道具", (org.xresloader.validator) = "ExcelItem_ALL_item_id"];
  }
}

message DQuestReward {
  repeated DItemOffset items = 1 [(org.xresloader.field_separator) = ";"];
  EnQuestRewardGiveOutType give_out_type = 2;
  int32 mail_template_id = 3;  // 只有发放到邮箱的时候这个字段才需要填

  google.protobuf.Timestamp can_receive_date = 11;
  DQuestDynamicReward dynamic = 28;  // 自选奖励
}

message DQuestDynamicReward {
  EnItemDynamicType type = 1;
  repeated DQuestDynamicRewardItem details = 4;
}

message DQuestDynamicRewardItem {
  int32 key = 1;  // EnItemDynamicType 对应的实例ID
  repeated DItemOffset items = 2 [(org.xresloader.field_separator) = ";"];
}

enum EnQuestRewardGiveOutType {
  EN_QUEST_REWARD_GIVE_OUT_TYPE_MANUAL = 0 [(org.xresloader.enum_alias) = "手动领取"];
  ;  // 手动领取
  EN_QUEST_REWARD_GIVE_OUT_TYPE_AUTO_INVENTORY = 1 [(org.xresloader.enum_alias) = "自动领取"];
  ;  // 自动领取
}

message ExcelQuestProgressType {
  option (xrescode.loader) = {
    file_path: "quest_progress_type.bytes"
    indexes: { fields: "id" index_type: EN_INDEX_KV }

    tags: "client"
    tags: "server"
  };

  int32 id = 1 [(org.xresloader.field_unique_tag) = "id"];
  EnQuestProgressValueCompareType value_compare_type = 11;
}
// QuestTriggerEventType
message ExcelQuestTriggerEventType {
  option (xrescode.loader) = {
    file_path: "quest_trigger_event_type.bytes"
    indexes: { fields: "id" index_type: EN_INDEX_KV }

    tags: "client"
    tags: "server"
  };

  int32 id = 1 [(org.xresloader.field_unique_tag) = "id"];

  repeated int32 progress_types = 11;
}
